# proto-hal

./: .gitignore  Cargo.toml  ci.sh  expanded_gpio.rs  notes.md
.github/workflows/: ci.yml
cli/: Cargo.toml  my_device.ron  my_device.toml  my_script.txt
cli/src/: main.rs  repl.rs  structures.rs  utils.rs
cli/src/repl/: commands.rs
cli/src/repl/commands/: commit.rs  create.rs  diff.rs  discard.rs  exit.rs  info.rs  list.rs  remove.rs  script.rs  select.rs  tree.rs
cli/src/repl/commands/create/: field.rs  peripheral.rs  register.rs  variant.rs
cli/src/utils/: feedback.rs  numeric_value.rs  path.rs
codegen/: Cargo.toml
codegen/src/: access.rs  lib.rs
codegen/src/structures/: entitlement.rs  field.rs  field_array.rs  register.rs  schema.rs
debug-bin/: Cargo.toml  asm.s  build.rs  device.x
debug-bin/.cargo/: config.toml
debug-bin/src/: main.rs
interpreter/: Cargo.toml  rust-toolchain.toml
interpreter/src/: main.rs
ir/: Cargo.toml
ir/src/: access.rs  lib.rs  structures.rs
ir/src/structures/: entitlement.rs  field.rs  hal.rs  interrupts.rs  peripheral.rs  register.rs  variant.rs
ir/src/utils/: diagnostic.rs
macros/: Cargo.toml
macros/src/: access.rs  lib.rs  structures.rs  utils.rs
macros/src/structures/: block.rs  entitlement.rs  field.rs  field_array.rs  interrupts.rs  register.rs  schema.rs  state.rs  state_array.rs  variant.rs  variant_array.rs
proto-hal/: Cargo.toml
proto-hal-build/: Cargo.toml
proto-hal-build/src/: codegen.rs  interrupts.rs  lib.rs
proto-hal-build/src/codegen/: macros.rs  render.rs
proto-hal-build/src/codegen/macros/: gates.rs  scaffolding.rs  write.rs
proto-hal-build/src/codegen/macros/gates/: modify_untracked.rs  read.rs  read_untracked.rs  write.rs  write_untracked.rs
proto-hal-macros/: Cargo.toml
proto-hal-macros/src/: lib.rs
proto-hal/src/: interrupt.rs  ir_utils.rs  lib.rs  macro_utils.rs  prelude.rs  regs.rs  stasis.rs  stm32.rs
proto-hal/src/gpio/: alternate.rs  analog.rs
proto-hal/src/regs/: block.rs  field.rs  register.rs
proto-hal/src/stm32/: adc.rs  exti.rs  power.rs
src/: lib.rs
src/gpio/: digital.rs  mod.rs
stm32/g4/: Cargo.toml  build.rs
stm32/g4/.cargo/: config.toml
stm32/g4/src/: interrupts.rs  lib.rs
stm32/g4/src/common/: cordic.rs  exti.rs  gpio.rs  mod.rs  rcc.rs  syscfg.rs
stm32/g4/src/core/: nvic.rs
stm32/g4/tests/: cordic.rs  exti.rs  gpio.rs
tests/: Cargo.toml
tests/abstract/: Cargo.toml
tests/abstract/macros/: Cargo.toml
tests/abstract/macros/src/: lib.rs
tests/abstract/model/: Cargo.toml
tests/abstract/model/src/: lib.rs  main.rs
tests/abstract/src/: lib.rs
tests/g4/: Cargo.toml  build.rs
tests/g4/macros/: Cargo.toml
tests/g4/macros/src/: lib.rs
tests/g4/model/: Cargo.toml
tests/g4/model/src/: cordic.rs  crc.rs  lib.rs  main.rs  rcc.rs
tests/g4/model/src/cordic/: csr.rs  rdata.rs  wdata.rs
tests/g4/model/src/cordic/csr/: argsize.rs  dmaren.rs  dmawen.rs  func.rs  ien.rs  nargs.rs  nres.rs  precision.rs  ressize.rs  rrdy.rs  scale.rs
tests/g4/model/src/cordic/rdata/: res.rs  res0.rs  res1.rs
tests/g4/model/src/cordic/wdata/: arg.rs  arg0.rs  arg1.rs
tests/g4/model/src/crc/: cr.rs  dr.rs  idr.rs
tests/g4/model/src/crc/cr/: polysize.rs  reset.rs  rev_in.rs  rev_out.rs  rst.rs
tests/g4/model/src/rcc/: ahb1enr.rs  ahbenr.rs
tests/g4/model/src/rcc/ahb1enr/: cordicen.rs
tests/g4/model/src/rcc/ahbenr/: en.rs
tests/g4/src/: lib.rs
tests/model/: Cargo.toml
tests/model/src/: lib.rs  main.rs
tests/src/: lib.rs
