[workspace]
members = ["proto-hal", "proto-hal-build", "ir", "tests/g4/out", "tests/abstract/out", "proto-hal-macros"]
exclude = ["debug-bin", "tests/abstract/macros"]
resolver = "2"

[workspace.dependencies]
colored = "3.0.0"
indexmap = "2.11.4"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
ters = "0.1.0"
tiva = "0.3.0"
