[package]
name = "proto-hal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
ir = { path = "../ir" }
toml = "0.8.20"
clap = { version = "4.5.28", features = ["derive"] }
shlex = "1.3.0"
colored = "3.0.0"
rustyline = "15.0.0"
enum_dispatch = "0.3.13"
prettytable = "0.10.0"
