[package]
name = "proto-hal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
ir = { path = "../ir" }
clap = { version = "4.5.28", features = ["derive"] }
shlex = "1.3.0"
colored = "3.0.0"
rustyline = "15.0.0"
enum_dispatch = "0.3.13"
prettytable = "0.10.0"
quote = "1.0.38"
termtree = "0.5.1"
ron = "0.9.0"

# crates of interest
# https://crates.io/crates/termtree
# https://crates.io/crates/indicatif
# https://crates.io/crates/clap_complete
# https://crates.io/crates/rustyline-derive
# https://crates.io/crates/dialoguer
# https://crates.io/crates/cli-table
