[package]
name = "ir"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
Inflector = "0.11.4"
proc-macro2 = "1.0.89"
quote = "1.0.37"
serde = { version = "1.0.217", features = ["derive"] }
tiva = "0.3.0"
syn = { version = "2.0.87", features = ["full"] }
toml = "0.8.20"
ters = "0.1.0"
