[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[features]
defmt = []

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
darling = { git = "https://github.com/adinack/darling" }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
tiva = "0.2.0"
