[package]
name = "proto-hal"
version = "0.1.0"
edition = "2021"

[features]
stm32 = ["pin_alternates"]

pin_alternates = []

[dependencies]
arbitrary-int = "1.2.7"
cordic = { version = "0.1.5", optional = true }
macros = { path = "../macros" }
static_assertions = "1.1.0"

[dev-dependencies]
fixed = "1.28.0"
proto-hal = { path = "./" }
