[package]
name = "proto-hal"
version = "0.1.0"
edition = "2021"

[features]
stm32 = ["pin_alternates"]

pin_alternates = []

defmt = ["dep:defmt", "macros/defmt"]

[dependencies]
arbitrary-int = "1.2.7"
defmt = { version = "0.3.10", optional = true }
macros = { path = "../macros" }

[dev-dependencies]
fixed = "1.28.0"
proto-hal = { path = "./" }
