[package]
name = "g4"
version = "0.1.0"
edition = "2021"

[features]
default = ["cordic"]
cordic = []

[dependencies]
proto-hal = { path = "../../proto-hal" }

[dev-dependencies]
defmt-test = "0.3.2"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
fixed = "1.28.0"

[[test]]
name = "gpio"
harness = false

[[test]]
name = "exti"
harness = false

[[test]]
name = "cordic"
harness = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
