[package]
name = "abstract"
version = "0.1.0"
edition = "2024"

[dependencies]
proto-hal = { path = "../../proto-hal" }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }

[build-dependencies]
model = { package = "abstract-model", path = "model" }
proto-hal-build = { path = "../../proto-hal-build" }
